--- a/zabbix-user-parameter.conf
+++ b/zabbix-user-parameter.conf
@@ -2,11 +2,11 @@ UserParameter=aelf_node_status_info[*],python3 /etc/zabbix/aelf-devops/aelf_node
 UserParameter=bp_node_produced_blocks,python3 /etc/zabbix/aelf-devops/bp_node_produced_blocks.py
 UserParameter=swap_oracle_client_error_log,python3 /etc/zabbix/aelf-devops/swap_oracle_client_error_log.py
 UserParameter=resource_usage_top3[*],python3 /etc/zabbix/aelf-devops/ProcessResourceUsageDetails/process_resource_usage_details.py $1 $2
-#进程监控
+#Process monitoring
 UserParameter=ContractEventHandler,ps -ef | grep ContractEventHandler | grep -v grep| wc -l
 UserParameter=EventHandler,ps -ef | grep EventHandler | grep -v grep| wc -l
 UserParameter=TokenSwap,ps -ef | grep TokenSwap | grep -v grep| wc -l
-#扫链高度监控
+#Chain sweeping height monitoring
 UserParameter=height_increace,/etc/zabbix/zabbix_agentd.d/height.sh
-#WEB钱包高度监控
+#Web wallet height monitoring
 UserParameter=best_chain_height,/usr/bin/python3 /etc/zabbix/zabbix_agentd.d/best-chain-height.py
